# project_gesture

./: .gitignore  README.md  build.bat  gesture_keys.spec  pyproject.toml  requirements.txt
src/gesture_keys/: __main__.py  app.py  config.py  constants.py  gesture_engine.py  key_executor.py  model_manager.py  tray.py
src/gesture_keys/web_ui/: server.py
src/gesture_keys/web_ui/static/: app.js  style.css
src/gesture_keys/web_ui/templates/: index.html
tests/: test_config.py  test_gesture_engine.py  test_key_executor.py
