[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "gesture-keys"
version = "1.0.0"
description = "Map hand gestures to keyboard shortcuts using MediaPipe"
requires-python = ">=3.11"
dependencies = [
    "mediapipe>=0.10.9",
    "opencv-python>=4.8.0",
    "pynput>=1.7.6",
    "pystray>=0.19.5",
    "flask>=3.0.0",
    "Pillow>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-mock>=3.0",
]

[tool.setuptools.packages.find]
where = ["src"]
